[metadata]
url = https://dapr.io/
author = Dapr Authors
author_email = daprweb@microsoft.com
license = Apache
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://github.com/dapr/docs
    Source = https://github.com/dapr/python-sdk

[options]
python_requires = >=3.7
packages = find_namespace:
include_package_data = True
zip_safe = False
install_requires =
    protobuf == 4.21.7
    grpcio >= 1.49.0
    aiohttp >= 3.6.2
    python-dateutil >= 2.8.1

[options.packages.find]
include =
    dapr.*
exclude =
    ext
    examples
    tests

[flake8]
exclude = 
    venv,
    build,
    dist,
    .git,
    .tox,
    dapr/proto,
    examples
ignore = F821
max-line-length = 100
