[metadata]
url = https://dapr.io/
author = Dapr Authors
author_email = daprweb@microsoft.com
license = Apache
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Documentation = https://github.com/dapr/docs
    Source = https://github.com/dapr/python-sdk

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = True
zip_safe = False
install_requires =
    protobuf >= 4.22
    grpcio >= 1.37.0
    grpcio-status>=1.37.0
    aiohttp >= 3.9.0b0
    python-dateutil >= 2.8.1
    typing-extensions>=4.4.0

[options.packages.find]
include =
    dapr
    dapr.*
exclude =
    ext
    examples
    tests

[options.package_data]
dapr.actor =
    py.typed
dapr.clients =
    py.typed
dapr.conf =
    py.typed
dapr.proto =
    py.typed
dapr.serializers =
    py.typed

[flake8]
exclude =
    .venv,
    venv,
    .env,
    build,
    dist,
    .git,
    .tox,
    dapr/proto,
    examples
ignore = F821, E501, W503, E203
max-line-length = 100
