[metadata]
url = https://dapr.io/
author = Dapr Authors
author_email = daprweb@microsoft.com
license = Apache
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
project_urls =
    Documentation = https://github.com/dapr/docs
    Source = https://github.com/dapr/python-sdk

[options]
python_requires = >=3.9
packages = find_namespace:
include_package_data = True
install_requires =
    dapr >= 1.16.1rc1
    langgraph >= 0.3.6
    langchain >= 0.1.17

[options.packages.find]
include =
    dapr.*

exclude =
    tests
