[metadata]
url = https://dapr.io/
author = Dapr
author_email = daprweb@microsoft.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
project_urls =
    Documentation = https://github.com/dapr/docs
    Source = https://github.com/dapr/python-sdk

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    protobuf == 3.11.3
    grpcio == 1.26.0
    Flask >= 1.1
    aiohttp >= 3.6.2
    python-dateutil >= 2.8.1
