[metadata]
url = https://dapr.io/
author = Dapr Authors
author_email = daprweb@microsoft.com
license = Apache
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
project_urls =
    Documentation = https://github.com/dapr/docs
    Source = https://github.com/dapr/python-sdk

[options]
python_requires = >=3.11
packages = find_namespace:
include_package_data = True
install_requires =
    dapr >= 1.17.0.dev
    dapr-agents >= 0.10.7
    pydantic >= 2.12.5
    langgraph >= 0.3.6
    strands-agents >= 1.24.0

[options.packages.find]
include =
    dapr.*

exclude =
    tests

[options.package_data]
dapr.ext.agent_core =
    py.typed
