[project]
name = "dapr-ext-fastapi-seherv-test"
dynamic = ["version"]
description = "Dapr FastAPI Extension for the Dapr Python SDK."
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Dapr Authors", email = "dapr@dapr.io"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dapr-seherv-test",
    "uvicorn>=0.11.6,<1.0.0",
    "fastapi>=0.60.1,<1.0.0",
]

[project.urls]
Documentation = "https://github.com/dapr/docs"
Source = "https://github.com/dapr/python-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "../../VERSION"
pattern = '(?P<version>\S+)'

[tool.hatch.build.targets.wheel]
only-include = ["dapr/ext/fastapi"]

[tool.uv.sources]
dapr-seherv-test = { workspace = true }
