[metadata]
url = https://dapr.io/
author = Dapr Authors
author_email = daprweb@microsoft.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Documentation = https://github.com/dapr/docs
    Source = https://github.com/dapr/python-sdk

[options]
python_requires = >=3.7
packages = find_namespace:
include_package_data = True
install_requires =
    dapr-dev >= 0.8.0a0.dev
    uvicorn >= 0.11.6
    fastapi >= 0.60.1

[options.packages.find]
include =
    dapr.*

exclude = 
    tests