[project]
name = "flask-dapr"
dynamic = ["version"]
description = "Dapr Flask Extension for the Dapr Python SDK."
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Dapr Authors", email = "dapr@dapr.io"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Flask>=1.1.4,<4.0.0",
    "dapr>=1.17.0",
]

[project.urls]
Documentation = "https://github.com/dapr/docs"
Source = "https://github.com/dapr/python-sdk"

[build-system]
requires = ["setuptools>=61.0", "wheel", "packaging", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flask_dapr*"]

[tool.setuptools.package-data]
"flask_dapr" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "flask_dapr.version.__version__"}

[tool.uv.sources]
dapr = { workspace = true }
